--- a/src/main/webapp/styles/style.css
+++ b/src/main/webapp/styles/style.css
@@ -1,4 +1,29 @@
+
+
 p{
     color: #60d03d;
 }
 
+.main{
+
+    width: 50%;
+    height: 50%;
+    margin: 20px auto;
+    border: 1px solid black;
+
+}
+.one{
+    width: 100%;
+    height: 50%;
+    margin: 100px auto;
+
+
+}
+input{
+    margin-left: 250px ;
+
+}
+
+h1{
+    margin-left: 570px;
+}
